@@ -29,6 +29,7 @@ static void vm_analysis_insn(int insn);
 #endif
 /* #define DECL_SC_REG(r, reg) VALUE reg_##r */
 
+#if VM_DEBUG_STACKOVERFLOW
 NORETURN(static void vm_stack_overflow_for_insn(void));
 static void
 vm_stack_overflow_for_insn(void)
@@ -37,6 +38,7 @@ vm_stack_overflow_for_insn(void)
 	   "Please contact ruby-core/dev with your (a part of) script. "
 	   "This check will be removed soon.");
 }
+#endif
 
 #if !OPT_CALL_THREADED_CODE
 static VALUE
